update product response
